--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="index.js"></script>
+<link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
+
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LB</title>
 
-    <table>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
+
 </head>
 
 <body>
+    <h2>btd6 race leaderboard loader by hemidemise...</h2>
+    <p>yeah seriously I didnt have time to add fancy colours or effects or other stuff</p>
+    <p>"Powered" by <a href="cq.netlify.app">Cyber Quincy Discord Bot</a></p>
+    <p>Dont mind the double lb, idk what was going on</p>
+    <br>
+
+    <input type="text" placeholder="key in race id" id="input">
+    <button type="button" onclick="loadLB();">Load LB</button>
+
+    <table id='tayble'>
+        <th>
+        <td>name</td>
+        <td>time</td>
+        <td>medal</td>
+        <td>medal</td>
+        <td>medal</td>
+        <td>level</td>
+        </th>
+    </table>
+
 
 </body>
 
