--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LB</title>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
 
 </head>
 
@@ -29,9 +30,7 @@
         <th>
         <td>name</td>
         <td>time</td>
-        <td>medal</td>
-        <td>medal</td>
-        <td>medal</td>
+        <td>medals</td>
         <td>level</td>
         </th>
     </table>
