--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <body>
     <h2>btd6 race leaderboard loader by hemidemise...</h2>
-    <p>yeah seriously I didnt have time to add fancy colours or effects or other stuff</p>
+    <p>yeah seriously I didnt have time to add fancy colours or effects or other stuff <a
+            href="https://github.com/hemisemidemipresent/lb">Github source code so you can make this better</a></p>
     <p>"Powered" by <a href="cq.netlify.app">Cyber Quincy Discord Bot</a></p>
     <p>Dont mind the double lb, idk what was going on</p>
     <br>
