--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p>by hemisemidemipresent</p>
                     <p><a href="https://github.com/hemisemidemipresent/lb">Github source code so you can make this
                             better</a></p>
-                    <p>"Powered" by <a href="cq.netlify.app">Cyber Quincy Discord Bot</a></p>
+                    <p>"Powered" by <a href="https://cq.netlify.app">Cyber Quincy Discord Bot</a></p>
                     <button type="button" onclick="loadCurrentLB();">Load Current LB</button>
                     <br><br>
                     <input type="text" placeholder="key in race id" id="input">
