--- a/profile/profile.html
+++ b/profile/profile.html
@@ -15,15 +15,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </head>
 
 <body>
     <main>
-
-
-
-
-
         <section class='glass'>
             <section id='text-container'>
                 <h1>btd6 profile loader</h1>
