--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
 
             <table id='tayble'>
                 <th>
-                <td>position</td>
                 <td>name</td>
                 <td>time</td>
                 <td>medals</td>
-                <td>level</td>
+                <td>lvl</td>
                 <td>user id</td>
                 <td>timestamp</td>
 
